--- a/inst/NSsamleRappLand.Rnw
+++ b/inst/NSsamleRappLand.Rnw
@@ -113,7 +113,7 @@ variable som finnes i registreringsskjema.
 
 <<'Variabeldef og utvalg', results='asis', echo=FALSE>>=
 NSdata <- NSPreprosesser(RegData=NSdata)
-NSdata$Aar <- NSdata$InnDato$year+1900
+#NSdata$Aar <- NSdata$InnDato$year+1900 #genereres i preprossess
 ShNavn <- NSdata$ShNavn[which(NSdata$ReshId == reshID)[1]]
 
 #Parametre
