Samlerapporter kjører. Tabeller viser alle tilknyttede skjema

--- a/inst/NSsamleRapp.Rnw
+++ b/inst/NSsamleRapp.Rnw
@@ -116,7 +116,7 @@ Der har du også mulighet for å lage egne figurer og tabeller.
 
 <<'Variabeldef og utvalg', results='asis', echo=FALSE>>=
 NSdata <- NSPreprosesser(RegData=NSdata)
-NSdata$Aar <- NSdata$InnDato$year+1900
+NSdata$Aar <- lubridate::year(NSdata$InnDato) #NSdata$InnDato$year+1900
 ShNavn <- as.character(NSdata$ShNavn[match(reshID, NSdata$ReshId)])
 '%i%' <- intersect
 
@@ -126,8 +126,8 @@ maxald <- 130
 erMann <- ''	#...
 traume <- ''	#'ja','nei', standard: ikke utvalgt (
 AIS <- ''
-datoFra <- '2011-01-01'	#Standard: 0, dvs. alle år
-datoTil <- '2050-05-25'
+datoFra <- ifelse(exists('datoFra'), datoFra,'2015-01-01')	#Standard: 0, dvs. alle år
+datoTil <- ifelse(exists('datoTil'), datoTil, Sys.Date())
 #reshID - gis fra Jasper	##105593-Haukeland, 106896-Sunnaas sykehus, 107627-St.Olavs, standard: 'Alle'
 s1 <- 0.8	#Skaleringsparameter for enkeltfigurer
 #s2 <- 0.7	#Skaleringsparameter for "dobbeltfigurer"
