--- a/inst/NSmndRapp.Rnw
+++ b/inst/NSmndRapp.Rnw
@@ -24,28 +24,28 @@ datoTil <- Sys.Date()
 dato <- as.POSIXlt(datoTil, tz='UTC')
 datoFra <- as.Date(paste0(1900+dato$year-1,'-', dato$mon+1, '-', '01'))
 aarFra <- paste0(1900+dato$year-5, '-01-01')
-      
+
 # Kjøres enten fra app eller lokalt og da er data tilgjengelig
 # if (!exists('HovedSkjema')){
 #       HovedSkjema <- NSRegDataSQL() #datoFra = datoFra, datoTil = datoTil)
-# 
+#
 #       registryName <- "nordicscir"
 #       dbType <- "mysql"
-# 
+#
 #       qLivs <- paste0('SELECT  UPPER(HovedskjemaGUID) AS HovedskjemaGUID, UPPER(SkjemaGUID) AS SkjemaGUID
 #                       FROM LifeQualityFormDataContract')
 #       qKontr <- paste0('SELECT  UPPER(HovedskjemaGUID) AS HovedskjemaGUID, UPPER(SkjemaGUID) AS SkjemaGUID,
 #                         HealthUnitShortName, NoControl, CNum
 #                        FROM ControlFormDataContract')
-#       qUrin <- paste0('SELECT  UPPER(HovedskjemaGUID) AS HovedskjemaGUID, UPPER(SkjemaGUID) AS SkjemaGUID 
+#       qUrin <- paste0('SELECT  UPPER(HovedskjemaGUID) AS HovedskjemaGUID, UPPER(SkjemaGUID) AS SkjemaGUID
 #                       FROM UrinaryTractFunctionFormDataContract')
-#       qTarm <- paste0('SELECT  UPPER(HovedskjemaGUID) AS HovedskjemaGUID, UPPER(SkjemaGUID) AS SkjemaGUID 
+#       qTarm <- paste0('SELECT  UPPER(HovedskjemaGUID) AS HovedskjemaGUID, UPPER(SkjemaGUID) AS SkjemaGUID
 #                       FROM BowelFunctionFormDataContract')
-#       qFunk <- paste0('SELECT  UPPER(HovedskjemaGUID) AS HovedskjemaGUID, UPPER(SkjemaGUID) AS SkjemaGUID 
+#       qFunk <- paste0('SELECT  UPPER(HovedskjemaGUID) AS HovedskjemaGUID, UPPER(SkjemaGUID) AS SkjemaGUID
 #                       FROM ActivityAndParticipationPerformanceFormDataContract')
 #       qTilf <- paste0('SELECT  UPPER(HovedskjemaGUID) AS HovedskjemaGUID, UPPER(SkjemaGUID) AS SkjemaGUID
 #                       FROM ActivityAndParticipationSatisfactionFormDataContract')
-#       
+#
 #       LivskvalH <- rapbase::LoadRegData(registryName, qLivs, dbType)
 #       KontrollH <- rapbase::LoadRegData(registryName, qKontr, dbType)
 #       UrinH <- rapbase::LoadRegData(registryName, qUrin, dbType)
@@ -88,11 +88,11 @@ MÅNEDSRAPPORT \\
 \section{Registreringsoversikter}
 
 \begin{frame}[fragile] {Innhold}
-Dette er en sammenstilling av resultater  fra NorSCIR. Alle registreringer er basert på ferdigstilte registreringer i registeret per rapportdato. Alle data er ikke nødvendigvis kvalitetssikret enda. Tidsutvalg for rapportene er spesifisert for hver enkelt figur. Datoer/årstall er basert på innleggelsesdato akuttsykehus (AdmitDt). 
+Dette er en sammenstilling av resultater  fra NorSCIR. Alle registreringer er basert på ferdigstilte registreringer i registeret per rapportdato. Alle data er ikke nødvendigvis kvalitetssikret enda. Tidsutvalg for rapportene er spesifisert for hver enkelt figur. Datoer/årstall er basert på innleggelsesdato akuttsykehus (AdmitDt).
 Rapporten viser følgende:
 \begin{itemize}
-\item Antall hovedskjema per år og avdeling. 
-\item	Registreringsoversikt med antall Registreringsskjema (hovedskjema) og tilknyttede skjema.  
+\item Antall hovedskjema per år og avdeling.
+\item	Registreringsoversikt med antall Registreringsskjema (hovedskjema) og tilknyttede skjema.
 \item	Andeler av hovedskjema som har et tilknyttet skjema
 \item Liggetider ved eget sykehus
 %\item	Andel som ikke har vært til kontrollopphold
@@ -132,7 +132,7 @@ xtable::xtable(tabAvdN, digits=0, align=c('l', rep('r', ncol(tabAvdN))),
 
 
 
-\begin{frame}[fragile] 
+\begin{frame}[fragile]
 <<'AndelOppfolg', results='asis'>>=
 #Tabell: Andel registreringsskjema med oppfølging siste 12 mnd
 
@@ -144,17 +144,17 @@ RaaTab <- data.frame(Sykehus = HovedSkjema12mnd$ShNavn,
       UrinH = HovedSkjema12mnd$SkjemaGUID %in% UrinH$HovedskjemaGUID,
       TarmH = HovedSkjema12mnd$SkjemaGUID %in% TarmH$HovedskjemaGUID,
       Funksjon = HovedSkjema12mnd$SkjemaGUID %in% AktivFunksjonH$HovedskjemaGUID,
-      Tilfredshet = HovedSkjema12mnd$SkjemaGUID %in% 
+      Tilfredshet = HovedSkjema12mnd$SkjemaGUID %in%
             AktivFunksjonH$HovedskjemaGUID[AktivFunksjonH$SkjemaGUID %in% AktivTilfredshetH$HovedskjemaGUID]
 )
 
 AntReg <- table(HovedSkjema12mnd$ShNavn)
-#AntOppf <- apply(RaaTab[ ,-1], MARGIN=2, 
+#AntOppf <- apply(RaaTab[ ,-1], MARGIN=2,
  #                      FUN=function(x) table(x,RaaTab$Sykehus)['TRUE',])
-AntOppf <- apply(RaaTab[ ,-1], MARGIN=2, 
+AntOppf <- apply(RaaTab[ ,-1], MARGIN=2,
                        FUN=function(x) tapply(x,INDEX=RaaTab$Sykehus, sum))
 AndelOppf <- 100*AntOppf / as.vector(AntReg)
-#AndelOppf <- 100*apply(RaaTab[ ,-1], MARGIN=2, 
+#AndelOppf <- 100*apply(RaaTab[ ,-1], MARGIN=2,
 #                       FUN=function(x) prop.table(tapply(x, RaaTab$Sykehus, sum),margin=2)['TRUE',])
 
 xtable::xtable(rbind(Hoved=AntReg,t(AntOppf)), digits=0, align=c('l', rep('r', nrow(AntOppf))),
@@ -182,14 +182,14 @@ RaaTabKtr <- data.frame(Sykehus = KontrollH$HealthUnitShortName,
       UrinH = KontrollH$SkjemaGUID %in% UrinH$HovedskjemaGUID,
       TarmH = KontrollH$SkjemaGUID %in% TarmH$HovedskjemaGUID,
       Funksjon = KontrollH$SkjemaGUID %in% AktivFunksjonH$HovedskjemaGUID,
-      Tilfredshet = KontrollH$SkjemaGUID %in% 
+      Tilfredshet = KontrollH$SkjemaGUID %in%
             AktivFunksjonH$SkjemaGUID[AktivFunksjonH$SkjemaGUID %in% AktivTilfredshetH$HovedskjemaGUID]
 )
 
 AntRegKtr <- table(KontrollH$HealthUnitShortName)
-#AntOppf <- apply(RaaTab[ ,-1], MARGIN=2, 
+#AntOppf <- apply(RaaTab[ ,-1], MARGIN=2,
  #                      FUN=function(x) table(x,RaaTab$Sykehus)['TRUE',])
-AntOppfKtr <- apply(RaaTabKtr[ ,-1], MARGIN=2, 
+AntOppfKtr <- apply(RaaTabKtr[ ,-1], MARGIN=2,
                        FUN=function(x) tapply(x,INDEX=RaaTabKtr$Sykehus, sum))
 AntKtr <- rbind(KontrollH=AntRegKtr, t(AntOppfKtr))
 AndelOppfKtr <- t(100*AntOppfKtr / as.vector(AntRegKtr))
@@ -216,7 +216,7 @@ indOppf <- which(HovedSkjema$SkjemaGUID %in% KontrollH$HovedskjemaGUID)
 RegShAar <- addmargins(table(HovedSkjema$Aar, HovedSkjema$ShNavn))
 RegShAarKtr <- addmargins(table(HovedSkjema$Aar[indOppf], HovedSkjema$ShNavn[indOppf]))
 AndelMKtr <- 100*RegShAarKtr/RegShAar
-rownames(AndelMKtr)[dim(AndelMKtr)[1] ]<- 'Alle år' 
+rownames(AndelMKtr)[dim(AndelMKtr)[1] ]<- 'Alle år'
 colnames(AndelMKtr)[dim(AndelMKtr)[2] ]<- 'Hele landet'
 
 xtable::xtable(AndelMKtr, digits=1, align=c('l', rep('r', ncol(AndelMKtr))),
@@ -239,7 +239,7 @@ for (valgtVar in variable) {
                    hentData=0, preprosess=0)
 }
 
-#'Tid fra skade til oppstart rehab.' = 'DagerTilRehab', 
+#'Tid fra skade til oppstart rehab.' = 'DagerTilRehab',
 #'Tid med rehabilitering' = 'DagerRehab',
 
 variable <- c('DagerTilRehab', 'DagerRehab')
@@ -313,14 +313,14 @@ Variabelen ble innført i desember og alle hovedskjema ferdigstilt (lukket førs
 #!!! Får trøbbel med encoding når benytter funksjonen over.
 
 TabNevrKlass <- function(HovedSkjema, datoFra='2018-01-01', datoTil=Sys.Date()){
-      
+
       Utvalg <- NSUtvalg(HovedSkjema, datoFra = datoFra, datoTil = datoTil)
       HovedSkjema <- Utvalg$RegData
       Ant <- addmargins(table(HovedSkjema$ShNavn))
       AntKlassInnUt <- addmargins(table(HovedSkjema$ShNavn[(HovedSkjema$AAis %in% 1:5) & (HovedSkjema$FAis %in% 1:5)]))
-      
+
 NevrKlass <- rbind(
-      'Utført og klassifiserbar, innkomst: ' = 
+      'Utført og klassifiserbar, innkomst: ' =
             addmargins(table(HovedSkjema$ShNavn[HovedSkjema$AAis %in% 1:5])),
       'Ikke utført  ved innkomst:' =
             addmargins(table(HovedSkjema$ShNavn[HovedSkjema$ANeuNoMeasure == TRUE & HovedSkjema$AAis == -1])),
@@ -333,7 +333,7 @@ NevrKlass <- rbind(
                                                      & HovedSkjema$FAis == -1])),
       'Utført, men ikke klassifiserbar, utreise: ' =
             addmargins(table(HovedSkjema$ShNavn[HovedSkjema$FAis==9])),
-      'Klassifisert ved både inn- og utreise: ' = 
+      'Klassifisert ved både inn- og utreise: ' =
             paste0(sprintf('%.0f',AntKlassInnUt/Ant*100), '%')
 )
 colnames(NevrKlass)[dim(NevrKlass)[2] ]<- 'Hele landet'
@@ -343,7 +343,7 @@ return(NevrKlass)
 
 NevrKlass <- TabNevrKlass(HovedSkjema = HovedSkjema12mnd, datoFra=datoFra, datoTil=Sys.Date())
 
-xtable::xtable(NevrKlass, digits=0, align=c('l', rep('r', ncol(NevrKlass))), 
+xtable::xtable(NevrKlass, digits=0, align=c('l', rep('r', ncol(NevrKlass))),
 		caption=paste0('Nevrologisk klassifikasjon for ferdigstilte innleggelser fra og med ',
 		               datoFra, ', antall.'))
 
@@ -359,7 +359,7 @@ HovedSkjema28 <- HovedSkjema12mnd[which(HovedSkjema12mnd$DagerRehab >28),]
 #NevrKlass28 <- lagTabNevrKlass(HovedSkjema = HovedSkjema28, datoFra=datoFra, datoTil=Sys.Date())
 NevrKlass28 <- TabNevrKlass(HovedSkjema = HovedSkjema28, datoFra=datoFra, datoTil=Sys.Date())
 
-xtable::xtable(NevrKlass28, digits=0, align=c('l', rep('r', ncol(NevrKlass28))), 
+xtable::xtable(NevrKlass28, digits=0, align=c('l', rep('r', ncol(NevrKlass28))),
 		caption=paste0('Nevrologisk klassifikasjon for ferdigstilte innleggelser fra og med ',
 		               datoFra, '. Antall pasienter med liggetid over 28 dager i ryggmargsskadeavdeling.'))
 
@@ -374,7 +374,7 @@ xtable::xtable(NevrKlass28, digits=0, align=c('l', rep('r', ncol(NevrKlass28))),
 
 
 \section{Liggetider}
-\begin{frame}[fragile] 
+\begin{frame}[fragile]
 <<'Liggetider', results='asis'>>=
 #Tabell: Andel registreringsskjema med oppfølging siste 12 mnd
 
@@ -385,8 +385,8 @@ Liggetider <- function(RegData, datoFra='2018-01-01', datoTil=Sys.Date(), enhets
       RegData <- NSUtvalg(RegData=RegData, datoFra=datoFra, datoTil = datoTil, traume=traume,
                           enhetsUtvalg = enhetsUtvalg, reshID = reshID)$RegData
       Liggetider <- rbind('Liggetid, totalt' = summary(RegData$OpphTot)[c(1,3,4,6)],
-                          'Liggetid på rehab.' =summary(RegData$DagerRehab)[c(1,3,4,6)],	
-                          'Liggetid før rehab.' = summary(RegData$DagerTilRehab)[c(1,3,4,6)]	
+                          'Liggetid på rehab.' =summary(RegData$DagerRehab)[c(1,3,4,6)],
+                          'Liggetid før rehab.' = summary(RegData$DagerTilRehab)[c(1,3,4,6)]
       )
       colnames(Liggetider) <- c('Min', 'Median', 'Gj.sn.', 'Maks')
       return(Liggetider)
@@ -405,37 +405,37 @@ xtable::xtable(LiggetiderUtraume, digits=0, align=c('l', rep('r', ncol(Liggetide
 @
 \end{frame}
 
-\begin{frame}[fragile]
-\begin{figure}[ht]
-\centering
-\includegraphics[scale=0.35]{DagerTilRehab_t_ja.pdf}
-\caption{Antall dager på sykehus før rehabilitering for pasienter med traumatisk ryggmargsskade}
-\end{figure}
-\end{frame}
-
-\begin{frame}[fragile]
-\begin{figure}[ht]
-\centering
-\includegraphics[scale=0.35]{DagerTilRehab_t_nei.pdf}
-\caption{Antall dager på sykehus før rehabilitering for pasienter med ikke-traumatisk ryggmargsskade}
-\end{figure}
-\end{frame}
-
-\begin{frame}[fragile]
-\begin{figure}[ht]
-\centering
-\includegraphics[scale=0.35]{DagerRehab_t_ja.pdf}
-\caption{Liggetid (dager) ved ryggmargsskadeavdeling for pasienter med traumatisk ryggmargsskade}
-\end{figure}
-\end{frame}
-
-\begin{frame}[fragile]
-\begin{figure}[ht]
-\centering
-\includegraphics[scale=0.35]{DagerRehab_t_nei.pdf}
-\caption{Liggetid (dager) ved ryggmargsskadeavdeling for pasienter med ikke-traumatisk ryggmargsskade}
-\end{figure}
-\end{frame}
+% \begin{frame}[fragile]
+% \begin{figure}[ht]
+% \centering
+% \includegraphics[scale=0.35]{DagerTilRehab_t_ja.pdf}
+% \caption{Antall dager på sykehus før rehabilitering for pasienter med traumatisk ryggmargsskade}
+% \end{figure}
+% \end{frame}
+%
+% \begin{frame}[fragile]
+% \begin{figure}[ht]
+% \centering
+% \includegraphics[scale=0.35]{DagerTilRehab_t_nei.pdf}
+% \caption{Antall dager på sykehus før rehabilitering for pasienter med ikke-traumatisk ryggmargsskade}
+% \end{figure}
+% \end{frame}
+%
+% \begin{frame}[fragile]
+% \begin{figure}[ht]
+% \centering
+% \includegraphics[scale=0.35]{DagerRehab_t_ja.pdf}
+% \caption{Liggetid (dager) ved ryggmargsskadeavdeling for pasienter med traumatisk ryggmargsskade}
+% \end{figure}
+% \end{frame}
+%
+% \begin{frame}[fragile]
+% \begin{figure}[ht]
+% \centering
+% \includegraphics[scale=0.35]{DagerRehab_t_nei.pdf}
+% \caption{Liggetid (dager) ved ryggmargsskadeavdeling for pasienter med ikke-traumatisk ryggmargsskade}
+% \end{figure}
+% \end{frame}
 
 
 \end{tiny}
