--- a/inst/NSmndRapp.Rnw
+++ b/inst/NSmndRapp.Rnw
@@ -24,53 +24,28 @@ datoTil <- Sys.Date()
 dato <- as.POSIXlt(datoTil, tz='UTC')
 datoFra <- as.Date(paste0(1900+dato$year-1,'-', dato$mon+1, '-', '01'))
 aarFra <- paste0(1900+dato$year-5, '-01-01')
-
-# Kjøres enten fra app eller lokalt og da er data tilgjengelig
-# if (!exists('HovedSkjema')){
-#       HovedSkjema <- NSRegDataSQL() #datoFra = datoFra, datoTil = datoTil)
-#
-#       registryName <- "nordicscir"
-#       dbType <- "mysql"
-#
-#       qLivs <- paste0('SELECT  UPPER(HovedskjemaGUID) AS HovedskjemaGUID, UPPER(SkjemaGUID) AS SkjemaGUID
-#                       FROM LifeQualityFormDataContract')
-#       qKontr <- paste0('SELECT  UPPER(HovedskjemaGUID) AS HovedskjemaGUID, UPPER(SkjemaGUID) AS SkjemaGUID,
-#                         HealthUnitShortName, NoControl, CNum
-#                        FROM ControlFormDataContract')
-#       qUrin <- paste0('SELECT  UPPER(HovedskjemaGUID) AS HovedskjemaGUID, UPPER(SkjemaGUID) AS SkjemaGUID
-#                       FROM UrinaryTractFunctionFormDataContract')
-#       qTarm <- paste0('SELECT  UPPER(HovedskjemaGUID) AS HovedskjemaGUID, UPPER(SkjemaGUID) AS SkjemaGUID
-#                       FROM BowelFunctionFormDataContract')
-#       qFunk <- paste0('SELECT  UPPER(HovedskjemaGUID) AS HovedskjemaGUID, UPPER(SkjemaGUID) AS SkjemaGUID
-#                       FROM ActivityAndParticipationPerformanceFormDataContract')
-#       qTilf <- paste0('SELECT  UPPER(HovedskjemaGUID) AS HovedskjemaGUID, UPPER(SkjemaGUID) AS SkjemaGUID
-#                       FROM ActivityAndParticipationSatisfactionFormDataContract')
-#
-#       LivskvalH <- rapbase::LoadRegData(registryName, qLivs, dbType)
-#       KontrollH <- rapbase::LoadRegData(registryName, qKontr, dbType)
-#       UrinH <- rapbase::LoadRegData(registryName, qUrin, dbType)
-#       TarmH <- rapbase::LoadRegData(registryName, qTarm, dbType)
-#       AktivFunksjonH <- rapbase::LoadRegData(registryName, qFunk, dbType)
-#       AktivTilfredshetH <- rapbase::LoadRegData(registryName, qTilf, dbType)
-#       }
-
+nordisk <- ifelse(sum(as.numeric(unique(HovedSkjema$LandKode)))==1, 0, 1)
 #Bare gyldige kontrollskjema:
 KontrollH <- KontrollH[KontrollH$NoControl=='False', ] # & KontrollH$CNum==1, ]
 
-#RegData <- NSRegDataSQL(datoFra=datoFra, datoTil=datoTil)
-HovedSkjema <- NSPreprosesser(RegData=HovedSkjema[which(HovedSkjema$AdmitDt > as.Date('2011-01-01')), ])
+#HovedSkjema <- NSPreprosesser(RegData=HovedSkjema[which(HovedSkjema$AdmitDt > as.Date('2011-01-01')), ])
+
+#!!!!!!!!NB: Kanskje må dette gjøre is preprosesseringa!! I så fall må inn/ut inngå som inngangsparameter i funksjonen
+HovedSkjema$MndNum <- HovedSkjema$DischgDt$mon +1
+HovedSkjema$MndAar <- format(HovedSkjema$DischgDt, '%b%y')
+HovedSkjema$Kvartal <- ceiling(HovedSkjema$MndNum/3)
+HovedSkjema$Halvaar <- ceiling(HovedSkjema$MndNum/6)
+HovedSkjema$Aar <- 1900 + HovedSkjema$AdmitDt$year
+
 HovedSkjema$ShNavn <- factor(HovedSkjema$ShNavn)
 HovedSkjema$SkjemaGUID <- toupper(HovedSkjema$SkjemaGUID)
-HovedSkjema5aar <- HovedSkjema[which(HovedSkjema$InnDato > as.Date(aarFra)), ]
-HovedSkjema12mnd <- HovedSkjema[which(HovedSkjema$InnDato > as.Date(datoFra)), ]
+HovedSkjema5aar <- HovedSkjema[which(HovedSkjema$UtDato > as.Date(aarFra)), ]
+HovedSkjema12mnd <- HovedSkjema[which(HovedSkjema$UtDato > as.Date(datoFra)), ]
 HovedSkjema$Aar <- factor(HovedSkjema$Aar, levels = 2011:(1900+dato$year))
 HovedSkjema5aar$Aar <- factor(HovedSkjema5aar$Aar, levels = (1900+dato$year-4):(1900+dato$year))
 
 enhetsUtvalg <- 1
-shtxt <- switch(as.character(enhetsUtvalg),
-                     '0' = 'Hele landet',
-                     '1' = as.character(HovedSkjema$HealthUnitName[match(reshID, HovedSkjema$ReshId)]),
-                     '2' = as.character(HovedSkjema$HealthUnitName[match(reshID, HovedSkjema$ReshId)]))
+shtxt <- as.character(HovedSkjema$ShNavn[match(reshID, HovedSkjema$ReshId)])
 @
 
 
@@ -88,7 +63,8 @@ MÅNEDSRAPPORT \\
 \section{Registreringsoversikter}
 
 \begin{frame}[fragile] {Innhold}
-Dette er en sammenstilling av resultater  fra NorSCIR. Alle registreringer er basert på ferdigstilte registreringer i registeret per rapportdato. Alle data er ikke nødvendigvis kvalitetssikret enda. Tidsutvalg for rapportene er spesifisert for hver enkelt figur. Datoer/årstall er basert på innleggelsesdato akuttsykehus (AdmitDt).
+Dette er en sammenstilling av resultater  fra NorSCIR. Alle registreringer er basert på ferdigstilte registreringer i registeret per rapportdato. Alle data er ikke nødvendigvis kvalitetssikret enda. Tidsutvalg for rapportene er spesifisert for hver enkelt figur.
+Datoer/årstall er basert på utskrivingsdato akuttsykehus (DischgDt).
 Rapporten viser følgende:
 \begin{itemize}
 \item Antall hovedskjema per år og avdeling.
@@ -115,14 +91,8 @@ tabAvdN <- addmargins(table(HovedSkjema5aar[c('ShNavn','Aar')]))
 rownames(tabAvdN)[dim(tabAvdN)[1] ]<- 'TOTALT, alle avdelinger:'
 colnames(tabAvdN)[dim(tabAvdN)[2] ]<- 'Siste 5 år'
 
-
-#xtable::print.xtable(
-#    x = xtable::xtable(
-#        x = addmargins(xtabs(formula = ~ Month + Hastegrad ,data = AP)) ,
-#        caption = "Antall registrerte prosedyrer etter hastegrad og måned" ,
-#        digits = 0) , booktabs = TRUE )
 xtable::xtable(tabAvdN, digits=0, align=c('l', rep('r', ncol(tabAvdN))),
-		caption='Antall hovedskjema per år og avdeling, siste 5 år.')
+		caption='Antall hovedskjema per år og avdeling, siste 5 år, basert på utskrivingsdato.')
 
 @
 \end{frame}
@@ -136,29 +106,29 @@ xtable::xtable(tabAvdN, digits=0, align=c('l', rep('r', ncol(tabAvdN))),
 <<'AndelOppfolg', results='asis'>>=
 #Tabell: Andel registreringsskjema med oppfølging siste 12 mnd
 
-
 RaaTab <- data.frame(Sykehus = HovedSkjema12mnd$ShNavn,
       #Aar = as.POSIXlt(Hskjema$AdmitDt, format="%Y-%m-%d")$year +1900,
-      LivskvalH = HovedSkjema12mnd$SkjemaGUID %in% LivskvalH$HovedskjemaGUID,
-      #KontrollH = HovedSkjema12mnd$SkjemaGUID %in% KontrollH$HovedskjemaGUID,
-      UrinH = HovedSkjema12mnd$SkjemaGUID %in% UrinH$HovedskjemaGUID,
-      TarmH = HovedSkjema12mnd$SkjemaGUID %in% TarmH$HovedskjemaGUID,
-      Funksjon = HovedSkjema12mnd$SkjemaGUID %in% AktivFunksjonH$HovedskjemaGUID,
-      Tilfredshet = HovedSkjema12mnd$SkjemaGUID %in%
+      Livskval = HovedSkjema12mnd$SkjemaGUID %in% LivskvalH$HovedskjemaGUID,
+      #Kontroll = HovedSkjema12mnd$SkjemaGUID %in% KontrollH$HovedskjemaGUID,
+      Urin = HovedSkjema12mnd$SkjemaGUID %in% UrinH$HovedskjemaGUID,
+      Tarm = HovedSkjema12mnd$SkjemaGUID %in% TarmH$HovedskjemaGUID)
+
+if (nordisk==0) {
+  RaaTab <- data.frame(
+    RaaTab,
+    Funksjon = HovedSkjema12mnd$SkjemaGUID %in% AktivFunksjonH$HovedskjemaGUID,
+    Tilfredshet = HovedSkjema12mnd$SkjemaGUID %in%
             AktivFunksjonH$HovedskjemaGUID[AktivFunksjonH$SkjemaGUID %in% AktivTilfredshetH$HovedskjemaGUID]
-)
+  )
+      }
 
 AntReg <- table(HovedSkjema12mnd$ShNavn)
-#AntOppf <- apply(RaaTab[ ,-1], MARGIN=2,
- #                      FUN=function(x) table(x,RaaTab$Sykehus)['TRUE',])
 AntOppf <- apply(RaaTab[ ,-1], MARGIN=2,
                        FUN=function(x) tapply(x,INDEX=RaaTab$Sykehus, sum))
 AndelOppf <- 100*AntOppf / as.vector(AntReg)
-#AndelOppf <- 100*apply(RaaTab[ ,-1], MARGIN=2,
-#                       FUN=function(x) prop.table(tapply(x, RaaTab$Sykehus, sum),margin=2)['TRUE',])
 
 xtable::xtable(rbind(Hoved=AntReg,t(AntOppf)), digits=0, align=c('l', rep('r', nrow(AntOppf))),
-		caption=paste0('Antall hovedskjema og antall av disse som har tilknyttede skjema. Innleggelser fra og med ', datoFra, '.'))
+		caption=paste0('Antall hovedskjema og antall av disse som har tilknyttede skjema. Pasienter utskrevet fra og med ', datoFra, '.'))
 
 xtable::xtable(t(AndelOppf), digits=1, align=c('l', rep('r', nrow(AndelOppf))),
 		caption=paste0('Andel (prosent) av registreringsskjemaene som har ulike typer oppfølgingsskjema.'))
@@ -187,8 +157,6 @@ RaaTabKtr <- data.frame(Sykehus = KontrollH$HealthUnitShortName,
 )
 
 AntRegKtr <- table(KontrollH$HealthUnitShortName)
-#AntOppf <- apply(RaaTab[ ,-1], MARGIN=2,
- #                      FUN=function(x) table(x,RaaTab$Sykehus)['TRUE',])
 AntOppfKtr <- apply(RaaTabKtr[ ,-1], MARGIN=2,
                        FUN=function(x) tapply(x,INDEX=RaaTabKtr$Sykehus, sum))
 AntKtr <- rbind(KontrollH=AntRegKtr, t(AntOppfKtr))
@@ -202,6 +170,7 @@ xtable::xtable(AndelOppfKtr, digits=1, align=c('l', rep('r', ncol(AndelOppfKtr))
 		caption=paste0('Andel (prosent) av kontrollskjemaene som har tilknyttede skjema.'))
 @
 \end{frame}
+
 
 
 \begin{frame} <handout:0 beamer:0>
@@ -231,27 +200,29 @@ xtable::xtable(AndelMKtr, digits=1, align=c('l', rep('r', ncol(AndelMKtr))),
 
 <<'LageFigurer', include=FALSE>>=
 
-variable <- c('SkadeArsak', 'Ntsci', 'AAis', 'FAis','RegForsinkelse')
-for (valgtVar in variable) {
+variabler <- c('SkadeArsak', 'Ntsci', 'AAis', 'FAis','RegForsinkelse')
+for (valgtVar in variabler) {
       outfile <- paste0(valgtVar, '.pdf')
-      NSFigAndeler(RegData=HovedSkjema12mnd, valgtVar=valgtVar, datoFra=datoFra,
-                   datoTil=datoTil, outfile=outfile, reshID=reshID, enhetsUtvalg=enhetsUtvalg,
+      NSFigAndeler(RegData=HovedSkjema12mnd, valgtVar=valgtVar,
+                   datoFra=datoFra, datoTil=datoTil, datoUt = 1,
+                   outfile=outfile, reshID=reshID, enhetsUtvalg=enhetsUtvalg,
                    hentData=0, preprosess=0)
 }
 
-#'Tid fra skade til oppstart rehab.' = 'DagerTilRehab',
-#'Tid med rehabilitering' = 'DagerRehab',
+# 'Tid fra skade til oppstart rehab.' = 'DagerTilRehab',
+# 'Tid med rehabilitering' = 'DagerRehab',
 
-variable <- c('DagerTilRehab', 'DagerRehab')
+#variabler <- c('DagerTilRehab', 'DagerRehab')
 
-for (valgtVar in variable) {
-      for (traume in c('ja', 'nei')){
-            outfile <- paste0(valgtVar, '_t_', traume,'.pdf')
-            NSFigAndeler(RegData=HovedSkjema12mnd, valgtVar=valgtVar, datoFra=datoFra, traume = traume,
-                         datoTil=datoTil, outfile=outfile, reshID=reshID, enhetsUtvalg=enhetsUtvalg,
-                         preprosess=0)
-            }
-      }
+# for (valgtVar in variabler) {
+#       for (traume in c('ja', 'nei')){
+#             outfile <- paste0(valgtVar, '_t_', traume,'.pdf')
+#             NSFigAndeler(RegData=HovedSkjema12mnd, valgtVar=valgtVar, preprosess=0,
+#                          datoFra=datoFra, datoTil=datoTil, datoUt = 1,
+#                          traume = traume, outfile=outfile, reshID=reshID, enhetsUtvalg=enhetsUtvalg,
+#                          )
+#             }
+#       }
 @
 
 \section{Pasientkarakteristika}
@@ -260,10 +231,10 @@ for (valgtVar in variable) {
 \begin{figure}[ht]
 \centering
 \includegraphics[scale=0.35]{RegForsinkelse.pdf}
-\caption{Registreringsforsinkelse. Kvalitetsmålet er registrering innen 30 dager. Målet ble innført 2018-01-01.}
+\caption{Registreringsforsinkelse. Kvalitetsmålet er registrering innen 30 dager. } %Målet ble innført 2018-01-01.
 \end{figure}
 
-Variabelen ble innført i desember og alle hovedskjema ferdigstilt (lukket første gang) etter desember 2017 vil derfor kunne inngå i figuren siden datoutvalget er basert på dato for innleggelse på akuttsykehus.
+% Variabelen ble innført i desember og alle hovedskjema ferdigstilt (lukket første gang) etter desember 2017 vil derfor kunne inngå i figuren siden datoutvalget er basert på dato for innleggelse på akuttsykehus.
 
 \end{frame}
 
@@ -312,39 +283,41 @@ Variabelen ble innført i desember og alle hovedskjema ferdigstilt (lukket førs
 #NevrKlass <- lagTabNevrKlass(HovedSkjema = HovedSkjema12mnd, datoFra=datoFra, datoTil=Sys.Date())
 #!!! Får trøbbel med encoding når benytter funksjonen over.
 
-TabNevrKlass <- function(HovedSkjema, datoFra='2018-01-01', datoTil=Sys.Date()){
-
-      Utvalg <- NSUtvalg(HovedSkjema, datoFra = datoFra, datoTil = datoTil)
-      HovedSkjema <- Utvalg$RegData
-      Ant <- addmargins(table(HovedSkjema$ShNavn))
-      AntKlassInnUt <- addmargins(table(HovedSkjema$ShNavn[(HovedSkjema$AAis %in% 1:5) & (HovedSkjema$FAis %in% 1:5)]))
-
-NevrKlass <- rbind(
-      'Utført og klassifiserbar, innkomst: ' =
-            addmargins(table(HovedSkjema$ShNavn[HovedSkjema$AAis %in% 1:5])),
-      'Ikke utført  ved innkomst:' =
-            addmargins(table(HovedSkjema$ShNavn[HovedSkjema$ANeuNoMeasure == TRUE & HovedSkjema$AAis == -1])),
-      'Utført, men ikke klassifiserbar, innkomst: ' =
-            addmargins(table(HovedSkjema$ShNavn[HovedSkjema$AAis==9])),
-       'Utført og klassifiserbar, utreise: ' =
-             addmargins(table(HovedSkjema$ShNavn[HovedSkjema$FAis %in% 1:5])),
-      'Ikke utført ved utreise:' =
-            addmargins(table(HovedSkjema$ShNavn[HovedSkjema$FNeuNoMeasure == TRUE
-                                                     & HovedSkjema$FAis == -1])),
-      'Utført, men ikke klassifiserbar, utreise: ' =
-            addmargins(table(HovedSkjema$ShNavn[HovedSkjema$FAis==9])),
-      'Klassifisert ved både inn- og utreise: ' =
-            paste0(sprintf('%.0f',AntKlassInnUt/Ant*100), '%')
-)
-colnames(NevrKlass)[dim(NevrKlass)[2] ]<- 'Hele landet'
-
-return(NevrKlass)
-}
+# TabNevrKlass <- function(HovedSkjema, datoFra='2018-01-01', datoTil=Sys.Date()){
+#
+#       Utvalg <- NSUtvalg(HovedSkjema, datoFra = datoFra, datoTil = datoTil, datoUt = 1)
+#       HovedSkjema <- Utvalg$RegData
+#       Ant <- addmargins(table(HovedSkjema$ShNavn))
+#       AntKlassInnUt <- addmargins(table(HovedSkjema$ShNavn[(HovedSkjema$AAis %in% 1:5) & (HovedSkjema$FAis %in% 1:5)]))
+#
+# NevrKlass <- rbind(
+#       'Utført og klassifiserbar, innkomst: ' =
+#             addmargins(table(HovedSkjema$ShNavn[HovedSkjema$AAis %in% 1:5])),
+#       'Ikke utført  ved innkomst:' =
+#             addmargins(table(HovedSkjema$ShNavn[HovedSkjema$ANeuNoMeasure == TRUE & HovedSkjema$AAis == -1])),
+#       'Utført, men ikke klassifiserbar, innkomst: ' =
+#             addmargins(table(HovedSkjema$ShNavn[HovedSkjema$AAis==9])),
+#        'Utført og klassifiserbar, utreise: ' =
+#              addmargins(table(HovedSkjema$ShNavn[HovedSkjema$FAis %in% 1:5])),
+#       'Ikke utført ved utreise:' =
+#             addmargins(table(HovedSkjema$ShNavn[HovedSkjema$FNeuNoMeasure == TRUE
+#                                                      & HovedSkjema$FAis == -1])),
+#       'Utført, men ikke klassifiserbar, utreise: ' =
+#             addmargins(table(HovedSkjema$ShNavn[HovedSkjema$FAis==9])),
+#       'Klassifisert ved både inn- og utreise: ' =
+#             paste0(sprintf('%.0f',AntKlassInnUt/Ant*100), '%')
+# )
+# colnames(NevrKlass)[dim(NevrKlass)[2] ]<- 'Hele landet'
+#
+# return(NevrKlass)
+# }
 
 NevrKlass <- TabNevrKlass(HovedSkjema = HovedSkjema12mnd, datoFra=datoFra, datoTil=Sys.Date())
 
+NevrKlass <- lagTabNevrKlass(HovedSkjema = HovedSkjema12mnd, datoFra=datoFra, datoTil=Sys.Date(), datoUt=0)
+
 xtable::xtable(NevrKlass, digits=0, align=c('l', rep('r', ncol(NevrKlass))),
-		caption=paste0('Nevrologisk klassifikasjon for ferdigstilte innleggelser fra og med ',
+		caption=paste0('Nevrologisk klassifikasjon for pasienter utskrevet fra og med ',
 		               datoFra, ', antall.'))
 
 @
@@ -356,11 +329,11 @@ xtable::xtable(NevrKlass, digits=0, align=c('l', rep('r', ncol(NevrKlass))),
 
 HovedSkjema28 <- HovedSkjema12mnd[which(HovedSkjema12mnd$DagerRehab >28),]
 
-#NevrKlass28 <- lagTabNevrKlass(HovedSkjema = HovedSkjema28, datoFra=datoFra, datoTil=Sys.Date())
-NevrKlass28 <- TabNevrKlass(HovedSkjema = HovedSkjema28, datoFra=datoFra, datoTil=Sys.Date())
+NevrKlass28 <- lagTabNevrKlass(HovedSkjema = HovedSkjema28, datoFra=datoFra, datoTil=Sys.Date(), datoUt = 1)
+#NevrKlass28 <- TabNevrKlass(HovedSkjema = HovedSkjema28, datoFra=datoFra, datoTil=Sys.Date())
 
 xtable::xtable(NevrKlass28, digits=0, align=c('l', rep('r', ncol(NevrKlass28))),
-		caption=paste0('Nevrologisk klassifikasjon for ferdigstilte innleggelser fra og med ',
+		caption=paste0('Nevrologisk klassifikasjon for pasienter utskrevet pasienter fra og med ',
 		               datoFra, '. Antall pasienter med liggetid over 28 dager i ryggmargsskadeavdeling.'))
 
 #For kvalitetsindikatorene ønskes fargekoder på teksten. Grenser:
@@ -380,10 +353,10 @@ xtable::xtable(NevrKlass28, digits=0, align=c('l', rep('r', ncol(NevrKlass28))),
 
 #!!! Får feil encoding hvis benytter funksjonen tabLiggetider fra NStabeller.R
 
-Liggetider <- function(RegData, datoFra='2018-01-01', datoTil=Sys.Date(), enhetsUtvalg=0, reshID=0,
-                          traume='') {
-      RegData <- NSUtvalg(RegData=RegData, datoFra=datoFra, datoTil = datoTil, traume=traume,
-                          enhetsUtvalg = enhetsUtvalg, reshID = reshID)$RegData
+Liggetider <- function(RegData, datoFra='2018-01-01', datoTil=Sys.Date(), datoUt=1,
+                       enhetsUtvalg=0, reshID=0, traume='') {
+      RegData <- NSUtvalg(RegData=RegData, datoFra=datoFra, datoTil = datoTil, datoUt = 1,
+                          traume=traume, enhetsUtvalg = enhetsUtvalg, reshID = reshID)$RegData
       Liggetider <- rbind('Liggetid, totalt' = summary(RegData$OpphTot)[c(1,3,4,6)],
                           'Liggetid på rehab.' =summary(RegData$DagerRehab)[c(1,3,4,6)],
                           'Liggetid før rehab.' = summary(RegData$DagerTilRehab)[c(1,3,4,6)]
@@ -392,15 +365,15 @@ Liggetider <- function(RegData, datoFra='2018-01-01', datoTil=Sys.Date(), enhets
       return(Liggetider)
 }
 
-LiggetiderMtraume <- Liggetider(RegData=HovedSkjema, datoFra=datoFra, datoTil=Sys.Date(), enhetsUtvalg=2, reshID=reshID,
-                          traume='ja')
+LiggetiderMtraume <- Liggetider(RegData=HovedSkjema, datoFra=datoFra, datoTil=Sys.Date(), datoUt=1,
+                                enhetsUtvalg=2, reshID=reshID, traume='ja')
 xtable::xtable(LiggetiderMtraume, digits=0, align=c('l', rep('r', ncol(LiggetiderMtraume))),
-		caption=paste0('Liggetider ved eget sykehus, pasienter med traumatisk ryggmargsskade. Innleggelser fra og med ',datoFra,'.'))
+		caption=paste0('Liggetider ved eget sykehus, pasienter med traumatisk ryggmargsskade. Pasienter utskrevet fra og med ',datoFra,'.'))
 
-LiggetiderUtraume <- Liggetider(RegData=HovedSkjema, datoFra=datoFra, datoTil=Sys.Date(), enhetsUtvalg=2, reshID=reshID,
-                          traume='nei')
+LiggetiderUtraume <- Liggetider(RegData=HovedSkjema, datoFra=datoFra, datoTil=Sys.Date(), datoUt=1,
+                                enhetsUtvalg=2, reshID=reshID, traume='nei')
 xtable::xtable(LiggetiderUtraume, digits=0, align=c('l', rep('r', ncol(LiggetiderMtraume))),
-		caption=paste0('Liggetider eget sykehus, pasienter med en ikke-traumatisk skade. Innleggelser fra og med ',datoFra,'.'))
+		caption=paste0('Liggetider eget sykehus, pasienter med en ikke-traumatisk skade. Pasienter utskrevet fra og med ',datoFra,'.'))
 
 @
 \end{frame}
