--- a/inst/NSmndRapp.Rnw
+++ b/inst/NSmndRapp.Rnw
@@ -26,9 +26,8 @@ datoFra <- as.Date(paste0(1900+dato$year-1,'-', dato$mon+1, '-', '01'))
 aarFra <- paste0(1900+dato$year-5, '-01-01')
 nordisk <- ifelse(sum(as.numeric(unique(HovedSkjema$LandKode)))==1, 0, 1)
 #Bare gyldige kontrollskjema:
-KontrollH <- KontrollH[KontrollH$NoControl=='False', ] # & KontrollH$CNum==1, ]
-
-#HovedSkjema <- NSPreprosesser(RegData=HovedSkjema[which(HovedSkjema$AdmitDt > as.Date('2011-01-01')), ])
+if (nordisk == 0) {
+KontrollH <- KontrollH[KontrollH$NoControl=='False', ]} # & KontrollH$CNum==1, ]
 
 #!!!!!!!!NB: Kanskje må dette gjøre is preprosesseringa!! I så fall må inn/ut inngå som inngangsparameter i funksjonen
 HovedSkjema$MndNum <- HovedSkjema$DischgDt$mon +1
